Fix routing refresh + inject contact API URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Vite site to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -33,8 +33,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          VITE_CONTACT_API_URL: ${{ vars.VITE_CONTACT_API_URL }}
-
+          VITE_CONTACT_API_URL: ${{ secrets.VITE_CONTACT_API_URL }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
